# repgeo-icecube

./: .gitignore  README.md  hello.py  loop.py  main.py  neurons.py  param_file.txt  pyproject.toml  test.txt
analyses/: loop.py  svd_analysis.py
cv/: test_cv.py  utils.py
simulations/: block_connection.py  excitatory_inhibitory.py  long-range-ising_2.py  long-range-ising_3.py
simulations/1DSim/: 0_sparse_representational_rdm_reconstruction.py  1_only_orientation_tuning.py  1_only_orientation_tuning_sparse.py  2_only_orientation_tuning_nonsparse.py  3_sparse_connection_orientation_tuning.py  4_correlated_noise.py  4_correlated_noise_visualize.py  5_correlated_noise_metric.py  6_correlated_noise_metrics.py  7_batch_simulations.py
simulations/tuning_composition/: 1d_orientation.py
src/: analysis.py  block_connection.py  block_matrix.py  ising.py  log.py  long-range-ising.py  long-range-ising_2.py  loop.py  neurons.py  one_dim.py  play.py  rank.ipynb
src/2d-sim/: 2d-simulation.py
src/analyses/: nonlinear_svd.py  one_dim.py  one_dim_kappa.py
src/simulations/: block_connection.py  ising.py  long-range-ising_2.py
src/utils/: block_matrix.py  gaussian_vonmises.py  generate_neighbor.py  icecream.py  transformation.py
utils/: energy_func.py  icecream.py  iem.py  plotter.py  rep_metrics.py  statistical_sampling.py
utils/cv/: __init__.py  crop_image.py
utils/datasets/: mnist.py
utils/generators/: block_matrix.py  classes_1D.py  noise.py
utils/logs/: log.py
utils/savers/: ensure.py  images.py  parameters.py
utils/similarities/: cka.py
(+10 files in other folders)
