[project]
name = "repgeo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "icecream>=2.1.4",
    "jax>=0.6.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "pydantic>=2.11.7",
    "pyqt6>=6.8.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sns>=0.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
